feat: 添加命令行参数解析功能
- 使用 Clikt 库实现命令行参数解析
- 新增 --upstream 和 --port 参数- 更新 build.gradle.kts 和 gradle.properties 文件以支持新功能- 修改 README.md 中的使用说明